kubernetes/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adventcalendar
  labels:
    name: adventcalendar
spec:
  rules:
    - host: adventcalendar.adamkoro.local
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/admin"
            backend:
              service:
                name: admin-frontend
                port:
                  name: http
          - pathType: ImplementationSpecific
            path: "/api/auth"
            backend:
              service:
                name: auth-api
                port:
                  name: http
          - pathType: ImplementationSpecific
            path: "/api/admin/usermanage"
            backend:
              service:
                name: admin-api
                port:
                  name: http
          - pathType: ImplementationSpecific
            path: "/api/admin/emailmanage"
            backend:
              service:
                name: email-publisher
                port:
                  name: http
          - pathType: ImplementationSpecific
            path: "/api/admin/public"
            backend:
              service:
                name: public-api
                port:
                  name: http
          - pathType: ImplementationSpecific
            path: "/api/public"
            backend:
              service:
                name: public-api
                port:
                  name: http
